Add counts to phenotype browse table

--- a/client/src/app/views/phenotypes/phenotypes-home/phenotypes-home.page.html
+++ b/client/src/app/views/phenotypes/phenotypes-home/phenotypes-home.page.html
@@ -9,7 +9,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-phenotypes-table></cvc-phenotypes-table>
+          <cvc-phenotypes-table cvcTitle="Browse Phenotypes"></cvc-phenotypes-table>
         </div>
       </div>
     </div>
