--- a/client/src/app/components/organizations/organizations-table/organizations-table.component.html
+++ b/client/src/app/components/organizations/organizations-table/organizations-table.component.html
@@ -66,7 +66,7 @@
             <button *ngIf="pageInfo.hasNextPage"
               (click)="loadMore(pageInfo.endCursor)"
               nz-button
-              nzBlock>Load More</button>
+              nzBlock>Load {{this.fetchMorePageSize}} More</button>
           </td>
         </tr>
       </ng-container>
