--- a/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.html
+++ b/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.html
@@ -76,7 +76,7 @@
             <button *ngIf="pageInfo.hasNextPage"
               (click)="loadMore(pageInfo.endCursor)"
               nz-button
-              nzBlock>Load More</button>
+              nzBlock>Load {{this.initialPageSize}} More</button>
           </td>
         </tr>
       </ng-container>
