Add counts to source suggestion browse table

--- a/client/src/app/views/source-suggestions/source-suggestions-home/source-suggestions-home.page.html
+++ b/client/src/app/views/source-suggestions/source-suggestions-home/source-suggestions-home.page.html
@@ -11,7 +11,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-source-suggestions-table></cvc-source-suggestions-table>
+          <cvc-source-suggestions-table cvcTitle="Browse Suggested Sources"></cvc-source-suggestions-table>
         </div>
       </div>
     </div>
