--- a/client/src/app/views/users/users-source-suggestions/users-source-suggestions.component.html
+++ b/client/src/app/views/users/users-source-suggestions/users-source-suggestions.component.html
@@ -1,7 +1,1 @@
-<cvc-entity-table-card [cvcTitle]="sourceSuggestionCardTitle">
-  <cvc-source-suggestions-table [submitterId]="this.userId"></cvc-source-suggestions-table>
-</cvc-entity-table-card>
-<ng-template #sourceSuggestionCardTitle>
-  <i nz-icon nzType="file-add"></i>
-  User Source Suggestions
-</ng-template>
+<cvc-source-suggestions-table [submitterId]="this.userId" cvcTitle="User Source Suggestions"></cvc-source-suggestions-table>
