--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -1,184 +1,204 @@
-<ng-container  *ngrxLet="viewer$ as viewer">
-  <nz-table #sourceSuggestionsTable
-    [nzData]="(sourceSuggestions$ | ngrxPush)"
-    [nzLoading]="(isLoading$ | ngrxPush)"
-    [nzFrontPagination]="false"
-    [nzShowPagination]="false">
-    <thead (nzSortOrderChange)="onSortChanged($event)">
-      <tr>
-        <th>
-          Status
-        </th>
-        <th nzWidth="15%" [nzColumnKey]="sortColumns.Submitter"
-          [nzSortFn]="true">
-          Submitter
-        </th>
-        <th [nzColumnKey]="sortColumns.SourceType"
-          [nzSortFn]="true">
-          Source Type
-        </th>
-        <th [nzColumnKey]="sortColumns.CitationId"
-          [nzSortFn]="true">
-          Citation ID
-        </th>
-        <th nzWidth="25%" [nzColumnKey]="sortColumns.Citation"
-          [nzSortFn]="true">
-          Citation
-        </th>
-        <th [nzColumnKey]="sortColumns.GeneName"
-          [nzSortFn]="true">
-          Gene
-        </th>
-        <th [nzColumnKey]="sortColumns.VariantName"
-          [nzSortFn]="true">
-          Variant
-        </th>
-        <th [nzColumnKey]="sortColumns.DiseaseName"
-          [nzSortFn]="true">
-          Disease
-        </th>
-        <th>
-          Comment
-        </th>
-        <th nzWidth="5%" *ngIf="viewer.signedIn">
-          Actions
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <nz-select nzAllowClear
-            nzPlaceHolder="Choose"
-            (ngModelChange)="onModelChanged()"
-            [(ngModel)]="statusInput">
-            <nz-option nzValue="NEW"
-              nzLabel="new"></nz-option>
-            <nz-option nzValue="CURATED"
-              nzLabel="curated"></nz-option>
-            <nz-option nzValue="REJECTED"
-              nzLabel="rejected"></nz-option>
-          </nz-select>
-        </th>
-        <th>
-          <cvc-clearable-input-filter *ngIf="!this.submitterId" [(inputModel)]="submitterInput"
-            placeholderText="Submitter"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th>
-          <nz-select nzAllowClear
-            nzPlaceHolder="Choose"
-            (ngModelChange)="onModelChanged()"
-            [(ngModel)]="sourceTypeInput">
-            <nz-option nzValue="PUBMED"
-              nzLabel="PubMed"></nz-option>
-            <nz-option nzValue="ASCO"
-              nzLabel="ASCO"></nz-option>
-          </nz-select>
-        </th>
-        <th>
-          <cvc-clearable-input-filter [(inputModel)]="citationIdInput"
-            placeholderText="ID"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th>
-          <cvc-clearable-input-filter [(inputModel)]="citationInput"
-            placeholderText="Citation"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th>
-          <cvc-clearable-input-filter [(inputModel)]="geneNameInput"
-            placeholderText="Gene"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th>
-          <cvc-clearable-input-filter [(inputModel)]="variantNameInput"
-            placeholderText="Variant"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th>
-          <cvc-clearable-input-filter [(inputModel)]="diseaseNameInput"
-            placeholderText="Disease"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th></th>
-        <th *ngIf="viewer.signedIn"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let suggestion of sourceSuggestionsTable.data">
-        <td>
-          {{ suggestion.status | lowercase }}
-          <i 
-          *ngIf="suggestion.reason &&  suggestion.reason !=''"
-          nz-icon 
-          nz-tooltip
-          [nzTooltipTitle]="suggestion.reason"
-          nzType="info-circle"></i>
-        </td>
-        <td>
-          <cvc-user-tag *ngIf="suggestion.user" [user]="suggestion.user"></cvc-user-tag>
-        </td>
-        <td>
-          <ng-container *ngIf="suggestion.source">
-            {{ suggestion.source.displayType }}
-          </ng-container>
-        </td>
-        <td>
-          <ng-container *ngIf="suggestion.source">
-            {{ suggestion.source.citationId}}
-          </ng-container>
-        </td>
-        <td>
-          <cvc-source-tag *ngIf="suggestion.source" [source]="suggestion.source"></cvc-source-tag>
-        </td>
-        <td>
-          <cvc-gene-tag *ngIf="suggestion.gene" [gene]="suggestion.gene"></cvc-gene-tag>
-        </td>
-        <td>
-          <cvc-variant-tag *ngIf="suggestion.variant" [variant]="suggestion.variant"></cvc-variant-tag>
-        </td>
-        <td>
-          <cvc-disease-tag *ngIf="suggestion.disease" [disease]="suggestion.disease"></cvc-disease-tag>
-        </td>
-        <td>
-          {{ suggestion.initialComment }}
-        </td>
-        <td *ngIf="viewer.signedIn">
-          <nz-button-group>
-            <button [disabled]="suggestion.status != status.New" 
+<nz-card [nzTitle]="titleTemplate">
+  <ng-container  *ngrxLet="viewer$ as viewer">
+    <nz-table #sourceSuggestionsTable
+      [nzData]="(sourceSuggestions$ | ngrxPush)"
+      [nzLoading]="(isLoading$ | ngrxPush)"
+      [nzFrontPagination]="false"
+      [nzShowPagination]="false">
+      <thead (nzSortOrderChange)="onSortChanged($event)">
+        <tr>
+          <th>
+            Status
+          </th>
+          <th nzWidth="15%" [nzColumnKey]="sortColumns.Submitter"
+            [nzSortFn]="true">
+            Submitter
+          </th>
+          <th [nzColumnKey]="sortColumns.SourceType"
+            [nzSortFn]="true">
+            Source Type
+          </th>
+          <th [nzColumnKey]="sortColumns.CitationId"
+            [nzSortFn]="true">
+            Citation ID
+          </th>
+          <th nzWidth="25%" [nzColumnKey]="sortColumns.Citation"
+            [nzSortFn]="true">
+            Citation
+          </th>
+          <th [nzColumnKey]="sortColumns.GeneName"
+            [nzSortFn]="true">
+            Gene
+          </th>
+          <th [nzColumnKey]="sortColumns.VariantName"
+            [nzSortFn]="true">
+            Variant
+          </th>
+          <th [nzColumnKey]="sortColumns.DiseaseName"
+            [nzSortFn]="true">
+            Disease
+          </th>
+          <th>
+            Comment
+          </th>
+          <th nzWidth="5%" *ngIf="viewer.signedIn">
+            Actions
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <nz-select nzAllowClear
+              nzPlaceHolder="Choose"
+              (ngModelChange)="onModelChanged()"
+              [(ngModel)]="statusInput">
+              <nz-option nzValue="NEW"
+                nzLabel="new"></nz-option>
+              <nz-option nzValue="CURATED"
+                nzLabel="curated"></nz-option>
+              <nz-option nzValue="REJECTED"
+                nzLabel="rejected"></nz-option>
+            </nz-select>
+          </th>
+          <th>
+            <cvc-clearable-input-filter *ngIf="!this.submitterId" [(inputModel)]="submitterInput"
+              placeholderText="Submitter"
+              [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          </th>
+          <th>
+            <nz-select nzAllowClear
+              nzPlaceHolder="Choose"
+              (ngModelChange)="onModelChanged()"
+              [(ngModel)]="sourceTypeInput">
+              <nz-option nzValue="PUBMED"
+                nzLabel="PubMed"></nz-option>
+              <nz-option nzValue="ASCO"
+                nzLabel="ASCO"></nz-option>
+            </nz-select>
+          </th>
+          <th>
+            <cvc-clearable-input-filter [(inputModel)]="citationIdInput"
+              placeholderText="ID"
+              [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          </th>
+          <th>
+            <cvc-clearable-input-filter [(inputModel)]="citationInput"
+              placeholderText="Citation"
+              [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          </th>
+          <th>
+            <cvc-clearable-input-filter [(inputModel)]="geneNameInput"
+              placeholderText="Gene"
+              [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          </th>
+          <th>
+            <cvc-clearable-input-filter [(inputModel)]="variantNameInput"
+              placeholderText="Variant"
+              [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          </th>
+          <th>
+            <cvc-clearable-input-filter [(inputModel)]="diseaseNameInput"
+              placeholderText="Disease"
+              [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          </th>
+          <th></th>
+          <th *ngIf="viewer.signedIn"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let suggestion of sourceSuggestionsTable.data">
+          <td>
+            {{ suggestion.status | lowercase }}
+            <i 
+            *ngIf="suggestion.reason &&  suggestion.reason !=''"
+            nz-icon 
+            nz-tooltip
+            [nzTooltipTitle]="suggestion.reason"
+            nzType="info-circle"></i>
+          </td>
+          <td>
+            <cvc-user-tag *ngIf="suggestion.user" [user]="suggestion.user"></cvc-user-tag>
+          </td>
+          <td>
+            <ng-container *ngIf="suggestion.source">
+              {{ suggestion.source.displayType }}
+            </ng-container>
+          </td>
+          <td>
+            <ng-container *ngIf="suggestion.source">
+              {{ suggestion.source.citationId}}
+            </ng-container>
+          </td>
+          <td>
+            <cvc-source-tag *ngIf="suggestion.source" [source]="suggestion.source"></cvc-source-tag>
+          </td>
+          <td>
+            <cvc-gene-tag *ngIf="suggestion.gene" [gene]="suggestion.gene"></cvc-gene-tag>
+          </td>
+          <td>
+            <cvc-variant-tag *ngIf="suggestion.variant" [variant]="suggestion.variant"></cvc-variant-tag>
+          </td>
+          <td>
+            <cvc-disease-tag *ngIf="suggestion.disease" [disease]="suggestion.disease"></cvc-disease-tag>
+          </td>
+          <td>
+            {{ suggestion.initialComment }}
+          </td>
+          <td *ngIf="viewer.signedIn">
+            <nz-button-group>
+              <button [disabled]="suggestion.status != status.New" 
+                nz-button nzSize="small" 
+                nz-tooltip nzTooltipTitle="Curate an Evidence Item from this Source Suggestion" >
+                <i nz-icon nzType="plus"></i>
+              </button>
+              <button 
               nz-button nzSize="small" 
-              nz-tooltip nzTooltipTitle="Curate an Evidence Item from this Source Suggestion" >
-              <i nz-icon nzType="plus"></i>
-            </button>
-            <button 
-            nz-button nzSize="small" 
-            nz-popover
-            nzPopoverTitle="Manage Source Suggestion"
-            nzPopoverPlacement="left"
-            nzPopoverTrigger="click"
-            [nzPopoverContent]="manageSuggestionTemplate"
-            (click)="setFormInputs(suggestion.id, suggestion.status)"
-            >
-              <i nz-icon nzType="edit"></i>
-            </button>
-          </nz-button-group>
-        </td>
-      </tr>
-      <!-- Load More button row -->
-      <ng-container *ngrxLet="pageInfo$ as pageInfo">
-        <tr *ngIf="pageInfo.hasNextPage">
-          <td colspan="10">
-            <button *ngIf="pageInfo.hasNextPage"
-              (click)="loadMore(pageInfo.endCursor)"
-              nz-button
-              nzBlock>Load More</button>
+              nz-popover
+              nzPopoverTitle="Manage Source Suggestion"
+              nzPopoverPlacement="left"
+              nzPopoverTrigger="click"
+              [nzPopoverContent]="manageSuggestionTemplate"
+              (click)="setFormInputs(suggestion.id, suggestion.status)"
+              >
+                <i nz-icon nzType="edit"></i>
+              </button>
+            </nz-button-group>
           </td>
         </tr>
-      </ng-container>
-    </tbody>
-  </nz-table>
-  <ng-template #manageSuggestionTemplate>
-<cvc-update-source-suggestion-form *ngIf="this.selectedSourceId && this.selectedStatus" 
-  [currentStatus]="this.selectedStatus" [sourceSuggestionId]="this.selectedSourceId" >
-</cvc-update-source-suggestion-form>
+        <!-- Load More button row -->
+        <ng-container *ngrxLet="pageInfo$ as pageInfo">
+          <tr *ngIf="pageInfo.hasNextPage">
+            <td colspan="10">
+              <button *ngIf="pageInfo.hasNextPage"
+                (click)="loadMore(pageInfo.endCursor)"
+                nz-button
+                nzBlock>Load {{this.pageSize}} More</button>
+            </td>
+          </tr>
+        </ng-container>
+      </tbody>
+    </nz-table>
+    <ng-template #manageSuggestionTemplate>
+  <cvc-update-source-suggestion-form *ngIf="this.selectedSourceId && this.selectedStatus"
+    [currentStatus]="this.selectedStatus" [sourceSuggestionId]="this.selectedSourceId" >
+  </cvc-update-source-suggestion-form>
+    </ng-template>
+  </ng-container>
+</nz-card>
+
+<ng-template #titleTemplate>
+  <i nz-icon nzType="civic:source"></i>
+  <ng-container *ngIf="this.cvcTitleTemplate">
+    <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
+  </ng-container>
+  <ng-container *ngIf="this.cvcTitle">
+    {{ this.cvcTitle }}
+  </ng-container>
+  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData" nz-typography nzType="secondary">
+    ({{totalCount}} new, showing {{visibleCount}} of {{filteredCount}} filtered)
+  </span>
+  <ng-template #noData>
+    <span nz-typography nzType="secondary">
+      (0 total)
+    </span>
   </ng-template>
-</ng-container>
+</ng-template>
