--- a/client/src/app/views/curation/curation-queues/pending-sources/pending-sources.page.html
+++ b/client/src/app/views/curation/curation-queues/pending-sources/pending-sources.page.html
@@ -1,1 +1,1 @@
-<cvc-source-suggestions-table></cvc-source-suggestions-table>
+<cvc-source-suggestions-table cvcTitle="Browse Suggested Sources"></cvc-source-suggestions-table>
