--- a/client/src/app/views/organizations/organizations-source-suggestions/organizations-source-suggestions.component.html
+++ b/client/src/app/views/organizations/organizations-source-suggestions/organizations-source-suggestions.component.html
@@ -1,7 +1,1 @@
-<cvc-entity-table-card [cvcTitle]="sourceSuggestionCardTitle">
-  <cvc-source-suggestions-table></cvc-source-suggestions-table>
-</cvc-entity-table-card>
-<ng-template #sourceSuggestionCardTitle>
-  <i nz-icon nzType="file-add"></i>
-  Organization Source Suggestions
-</ng-template>
+<cvc-source-suggestions-table cvcTitle="Organization Source Suggestions"></cvc-source-suggestions-table>
