--- a/client/src/app/views/sources/sources-home/sources-home.page.html
+++ b/client/src/app/views/sources/sources-home/sources-home.page.html
@@ -24,7 +24,7 @@
       <div nz-col
         [nzSpan]="24">
         <div class="content">
-          <cvc-sources-table></cvc-sources-table>
+          <cvc-sources-table cvcTitle="Browse Sources"></cvc-sources-table>
         </div>
       </div>
     </div>
