Add counts to user browse table

--- a/client/src/app/views/users/users-home/users-home.page.html
+++ b/client/src/app/views/users/users-home/users-home.page.html
@@ -12,7 +12,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-users-table></cvc-users-table>
+          <cvc-users-table cvcTitle="Browse Contributors"></cvc-users-table>
         </div>
       </div>
     </div>
