Add counts to variant group browse table

--- a/client/src/app/views/variant-groups/variant-groups-home/variant-groups-home.page.html
+++ b/client/src/app/views/variant-groups/variant-groups-home/variant-groups-home.page.html
@@ -23,7 +23,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-variant-groups-table></cvc-variant-groups-table>
+          <cvc-variant-groups-table cvcTitle="Browse Variant Groups"></cvc-variant-groups-table>
         </div>
       </div>
     </div>
