Add counts to variant types browse table

--- a/client/src/app/views/variant-types/variant-types-home/variant-types-home.page.html
+++ b/client/src/app/views/variant-types/variant-types-home/variant-types-home.page.html
@@ -9,7 +9,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-variant-types-table></cvc-variant-types-table>
+          <cvc-variant-types-table cvcTitle="Browse Variant Types"></cvc-variant-types-table>
         </div>
       </div>
     </div>
