--- a/client/src/app/views/variants/variants-home/variants-home.page.html
+++ b/client/src/app/views/variants/variants-home/variants-home.page.html
@@ -12,7 +12,7 @@
     <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-variants-table></cvc-variants-table>
+          <cvc-variants-table cvcTitle="Browse Variants"></cvc-variants-table>
         </div>
       </nz-col>
     </nz-row>
