Add assertion home section navigation

--- a/client/src/app/views/assertions/assertions-home/assertions-home.page.html
+++ b/client/src/app/views/assertions/assertions-home/assertions-home.page.html
@@ -1,3 +1,16 @@
+<cvc-section-navigation [actionsTpl]="assertionActions"> </cvc-section-navigation>
+<ng-template #assertionActions>
+  <ng-container *ngrxLet="viewer$ as viewer">
+    <button routerLink="/assertions/add/submit"
+      *ngIf="viewer.signedIn"
+      nz-button
+      nzSize="small">
+      <i nz-icon nzType="plus-circle"></i>
+      Submit New Assertion
+    </button>
+  </ng-container>
+</ng-template>
+
 <nz-page-header class="site-page-header">
   <nz-page-header-title>
     <i nz-icon
