--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -23,18 +23,6 @@
       class="sidebar-menu"
       [ngClass]="{ 'is-collapsed': isCollapsed }"
       [nzInlineCollapsed]="isCollapsed">
-      <li nz-menu-group>
-        <ul>
-          <li nz-menu-item
-            nzSelected
-            nzMatchRouter>
-            <i nz-icon
-              nzType="home"
-              nzThemes="filled"></i>
-            <span> <a routerLink="/welcome">Home</a> </span>
-          </li>
-        </ul>
-      </li>
       <li nz-menu-group
         [nzTitle]="isCollapsed ? 'KNOW' : 'KNOWLEDGEBASE'">
         <ul>
@@ -279,6 +267,11 @@
           <ul nz-menu
             nzMode="horizontal"
             nzTheme="dark">
+            <li nz-menu-item
+              nzSelected
+              nzMatchRouter>
+              <a routerLink="/welcome">Home</a>
+            </li>
             <li nz-menu-item
               nzSelected
               nzMatchRouter>
