curation-queues lazy-loaded

--- a/client/src/app/views/curation/curation-queues/curation-queues.view.html
+++ b/client/src/app/views/curation/curation-queues/curation-queues.view.html
@@ -5,6 +5,7 @@
 
   <!-- title -->
   <nz-page-header-title>
+    <i nz-icon nzType="file-add"></i>
     Curation Queues
   </nz-page-header-title>
 
