--- a/client/src/app/views/pages/pages-help/pages-help.page.html
+++ b/client/src/app/views/pages/pages-help/pages-help.page.html
@@ -12,20 +12,41 @@
         <div class="content" style="min-height: 600px">
           <nz-space nzDirection="vertical" style="width: 100%">
             <nz-row [nzGutter]="24" *nzSpaceItem>
-              <nz-col [nzSpan]="8">
+              <nz-col [nzSpan]="6">
                 <nz-card nzType="inner" nzTitle="Knowledgebase Documentation" style="width: 100%">
-                  <p>Nam in odio vitae massa hendrerit congue nec ut ante. Integer non felis eu dui posuere finibus et eu tellus. Morbi magna ligula, commodo ac odio nec, consectetur commodo augue. Integer mattis in tellus et pulvinar. Vivamus porta finibus mauris eu suscipit.</p>
-
+                  <p>
+                    CIViC provides an educational resource to support better understanding of the current state of precision medicine. It may also provide useful summaries and links to relevant published evidence for the clinical relevance of specific variants.
+                  </p>
+                  <p>
+                    For more information on the CIViC knowledge model, please see <a href="https://docs.civicdb.org/en/latest/model.html" target="_blank">our documentation</a>.
+                  </p>
                 </nz-card>
               </nz-col>
-              <nz-col [nzSpan]="8">
+              <nz-col [nzSpan]="6">
                 <nz-card nzType="inner" nzTitle="Curation Process Documentation" style="width: 100%">
-                  <p>Nam in odio vitae massa hendrerit congue nec ut ante. Integer non felis eu dui posuere finibus et eu tellus. Morbi magna ligula, commodo ac odio nec, consectetur commodo augue. Integer mattis in tellus et pulvinar. Vivamus porta finibus mauris eu suscipit.</p>
+                  <p>
+                    CIViC provides an open forum for community contributions. Anyone can create an account to flag problems, add comments, propose revisions to existing content, or submit new evidence, assertions, or summaries. All proposed additions/revisions enter a pending state until considered for acceptance by a CIViC editor. All content contributed and accepted is immediately considered public domain knowledge.
+                  </p>
+                  <p>
+                    For more details on how to contribute please read our <a href="https://docs.civicdb.org/en/latest/curating.html" target="_blank">curating docs</a>.
+                  </p>
                 </nz-card>
               </nz-col>
-              <nz-col [nzSpan]="8">
+              <nz-col [nzSpan]="6">
+                <nz-card nzType="inner" nzTitle="API Documention" style="width: 100%">
+                  <p>
+                    CIViC data can be retrieved using the underlying GraphQL API. The API documentation is available on <a href="https://griffithlab.github.io/civic-v2/" target="_blank">GitHub</a>.
+                  </p>
+                </nz-card>
+              </nz-col>
+              <nz-col [nzSpan]="6">
                 <nz-card nzType="inner" nzTitle="Tutorials" style="width: 100%">
-                  <p>Nam in odio vitae massa hendrerit congue nec ut ante. Integer non felis eu dui posuere finibus et eu tellus. Morbi magna ligula, commodo ac odio nec, consectetur commodo augue. Integer mattis in tellus et pulvinar. Vivamus porta finibus mauris eu suscipit.</p>
+                  <p>
+                    We've recorded a few instructional videos to offer overviews of the CIViC application. They are recommended viewing for users wishing to gain a quick understanding of basic CIViC interface elements and workflows.
+                  </p>
+                  <p>
+                    These videos can be found on the <a href="https://www.youtube.com/playlist?list=PLImz36orVFPCQjx6wjMrYW-IPWGk8HrbX" target="_blank">CIViC YouTube channel</a>.
+                  </p>
                 </nz-card>
               </nz-col>
             </nz-row>
