Make "Become an Editor" text a link

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -25,7 +25,7 @@
             and support <br/>for cancer-related mutations.</h1></div>
           <div nz-carousel-content>
             <h1>
-            Become an Editor! <br/>Help moderate updates to CIViC
+            <a class="header-link" href="https://civic.readthedocs.io/en/latest/curating/editor.html" target="_blank">Become an Editor! <br/>Help moderate updates to CIViC</a>
           </h1></div>
         </nz-carousel>
       </nz-space>
