--- a/client/src/app/views/welcome/welcome.component.less
+++ b/client/src/app/views/welcome/welcome.component.less
@@ -34,6 +34,10 @@
   border-radius: @border-radius-md;
 }
 
+.header-link {
+  color: white
+}
+
 // .space-align-container {
 //   display: flex;
 //   align-item: flex-start;
