--- a/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
+++ b/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
@@ -20,10 +20,11 @@
         <th nzWidth="20%"
           nzRight
           [nzColumnKey]="sortColumns.VariantCount"
-          [nzSortFn]="true"><i nz-icon
-            nzType="civic:variant"
-            nz-tooltip
-            nzTooltipTitle="Variant count"></i></th>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Variant Count">
+          <i nz-icon nzType="civic:variant"></i>
+        </th>
       </tr>
       <tr>
         <th>
