--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -39,19 +39,13 @@
             [nzColumnKey]="sortColumns.EvidenceItemCount"
             [nzSortFn]="true"
             nz-tooltip
-            nzTooltipTitle="Evidence Count"><i nz-icon
-                                              nzType="civic:evidence"
-                                              nz-tooltip
-                                              nzTooltipTitle="Evidence count"></i></th>
+            nzTooltipTitle="Evidence Count"><i nz-icon nzType="civic:evidence"></i></th>
           <th nzWidth="3%"
             nzRight
             [nzColumnKey]="sortColumns.AssertionCount"
             [nzSortFn]="true"
             nz-tooltip
-            nzTooltipTitle="Assertion Count"><i nz-icon
-                                nzType="civic:assertion"
-                                nz-tooltip
-                                nzTooltipTitle="Assertion count"></i></th>
+            nzTooltipTitle="Assertion Count"><i nz-icon nzType="civic:assertion"></i></th>
         </tr>
         <tr>
           <th>
