--- a/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
@@ -20,17 +20,19 @@
         <th nzWidth="10%"
           nzRight
           [nzColumnKey]="sortColumns.SourceCount"
-          [nzSortFn]="true"><i nz-icon
-            nzType="civic:source"
-            nz-tooltip
-            nzTooltipTitle="Source count"></i></th>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Source Count">
+          <i nz-icon nzType="civic:source"></i>
+        </th>
         <th nzWidth="10%"
           nzRight
           [nzColumnKey]="sortColumns.EvidenceItemCount"
-          [nzSortFn]="true"><i nz-icon
-            nzType="civic:evidence"
-            nz-tooltip
-            nzTooltipTitle="Evidence count"></i></th>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Evidence Count">
+          <i nz-icon nzType="civic:evidence"></i>
+        </th>
       </tr>
       <tr>
         <th>
