--- a/client/src/app/components/diseases/diseases-table/diseases-table.component.html
+++ b/client/src/app/components/diseases/diseases-table/diseases-table.component.html
@@ -21,35 +21,31 @@
         </th>
         <th nzWidth="8%"
           [nzColumnKey]="sortColumns.GeneCount"
-          [nzSortFn]="true">
-          <i nz-icon
-            nzType="civic:gene"
-            nz-tooltip
-            nzTooltipTitle="Gene Count"></i>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Gene Count">
+          <i nz-icon nzType="civic:gene"></i>
         </th>
         <th nzWidth="8%"
           [nzColumnKey]="sortColumns.VariantCount"
-          [nzSortFn]="true">
-          <i nz-icon
-            nzType="civic:variant"
-            nz-tooltip
-            nzTooltipTitle="Variant Count"></i>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Variant Count">
+          <i nz-icon nzType="civic:variant"></i>
         </th>
         <th nzWidth="8%"
           [nzColumnKey]="sortColumns.EvidenceItemCount"
-          [nzSortFn]="true">
-          <i nz-icon
-            nzType="civic:evidence"
-            nz-tooltip
-            nzTooltipTitle="Evidence Count"></i>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Evidence Count">
+          <i nz-icon nzType="civic:evidence"></i>
         </th>
         <th nzWidth="8%"
           [nzColumnKey]="sortColumns.AssertionCount"
-          [nzSortFn]="true">
-          <i nz-icon
-            nzType="civic:assertion"
-            nz-tooltip
-            nzTooltipTitle="Assertion Count"></i>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Assertion Count">
+          <i nz-icon nzType="civic:assertion"></i>
         </th>
       </tr>
       <tr>
