--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -35,10 +35,11 @@
         </th>
         <th nzRight
           [nzColumnKey]="sortColumns.EvidenceCount"
-          [nzSortFn]="true"><i nz-icon
-            nzType="civic:evidence"
-            nz-tooltip
-            nzTooltipTitle="Evidence Count"></i></th>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Evidence Count">
+          <i nz-icon nzType="civic:evidence"></i>
+        </th>
       </tr>
       <tr>
         <th></th>
