--- a/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
+++ b/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
@@ -20,19 +20,17 @@
           </th>
           <th nzWidth="10%"
             [nzColumnKey]="sortColumns.VariantCount"
-            [nzSortFn]="true">
-            <i nz-icon
-              nzType="civic:variant"
-              nz-tooltip
-              nzTooltipTitle="Variant Count"></i>
+            [nzSortFn]="true"
+            nz-tooltip
+            nzTooltipTitle="Variant Count">
+            <i nz-icon nzType="civic:variant"></i>
           </th>
           <th nzWidth="10%"
             [nzColumnKey]="sortColumns.EvidenceItemCount"
-            [nzSortFn]="true">
-            <i nz-icon
-              nzType="civic:evidence"
-              nz-tooltip
-              nzTooltipTitle="Evidence Count"></i>
+            [nzSortFn]="true"
+            nz-tooltip
+            nzTooltipTitle="Evidence Count">
+            <i nz-icon nzType="civic:evidence"></i>
           </th>
         </tr>
         <tr>
